# spike-knowledge-graph

./: albert_einstein.txt  albert_einstein_summary.txt  app.py  generate_knowledge_graph.py  knowledge_graph.html  knowledge_graph.ipynb  llm_graph_transformer_in_depth.ipynb  main.py  marie_curie_summary.json  marie_curie_summary.txt  pyproject.toml
